force-app/main/default/objects/Monthly_Operating_Priority__c/Monthly_Operating_Priority__c.object-meta.xml
<CustomObject>
    <label>Monthly Operating Priority</label>
    <nameField>
        <displayFormat>MOP-{0000}</displayFormat>
        <label>Priority Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Operating Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>