force-app/main/default/objects/Monthly_Operating_Priority__c/fields/Booking_Window__c.field-meta.xml
<CustomField>
    <fullName>Booking_Window__c</fullName>
    <label>Booking Window</label>
    <type>Text</type>
    <length>255</length>
</CustomField>