force-app/main/default/objects/Monthly_Operating_Priority__c/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <label>Dates</label>
    <type>Text</type>
    <length>255</length>
</CustomField>