force-app/main/default/objects/Monthly_Operating_Priority__c/fields/On_Cycle__c.field-meta.xml
<CustomField>
    <fullName>On_Cycle__c</fullName>
    <label>On Cycle</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>