force-app/main/default/objects/Monthly_Operating_Priority__c/fields/Price_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Point__c</fullName>
    <label>Price Point</label>
    <type>Text</type>
    <length>100</length>
</CustomField>