force-app/main/default/objects/Monthly_Operating_Priority__c/fields/Priority_Description__c.field-meta.xml
<CustomField>
    <fullName>Priority_Description__c</fullName>
    <label>Priority Description</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>