force-app/main/default/objects/Monthly_Operating_Priority__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>