force-app/main/default/objects/Monthly_Operating_Priority__c/fields/Tab__c.field-meta.xml
<CustomField>
    <fullName>Tab__c</fullName>
    <label>Tab</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>